--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@pinecone-database/pinecone": "^0.1.6",
+    "dotenv": "^16.1.4",
     "langchain": "^0.0.92"
-  }
+  },
+  "type": "module"
 }
